# bank-marketing

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
bank_marketing_analysis/: __init__.py  config.py  dataset.py  features.py  plots.py
bank_marketing_analysis/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: setup.py
