[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bank_marketing_analysis"
version = "0.0.1"
description = "This is an end-to-end system for predicting if a client would sbuscribe to a term deposit"
authors = [
  { name = "Samuel" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.11"


[tool.ruff]
line-length = 99
src = ["bank_marketing_analysis"]
include = ["pyproject.toml", "bank_marketing_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bank_marketing_analysis"]
force-sort-within-sections = true

